Fixes styling of search button on mobile safari.

--- a/_sass/app.scss
+++ b/_sass/app.scss
@@ -1433,6 +1433,7 @@ GOOGLE SEARCH STYLES
   margin: 0 !important;
 }
 input.gsc-search-button {
+  -webkit-appearance: none;
   background-color: #008CBA !important;
   color: #fff !important;
   height: 36px !important;
